api get district
