# swagger/v1/swagger.json
@@ -5,6 +5,139 @@
     "version": "v1"
   },
   "paths": {
+    "/api/v1/rates/district": {
+      "get": {
+        "summary": "list districts from JNE",
+        "tags": [
+          "Rates"
+        ],
+        "parameters": [
+          {
+            "name": "city_id",
+            "in": "query",
+            "example": 60,
+            "description": "city id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful",
+            "content": {
+              "application/json": {
+                "example": {
+                  "success": true,
+                  "message": "Districts fetched successfully",
+                  "courier": "JNE",
+                  "data": [
+                    {
+                      "id": 556,
+                      "name": "NGAMPRAH"
+                    },
+                    {
+                      "id": 557,
+                      "name": "LEMBANG"
+                    },
+                    {
+                      "id": 558,
+                      "name": "BATUJAJAR"
+                    },
+                    {
+                      "id": 559,
+                      "name": "CIKALONG WETAN"
+                    },
+                    {
+                      "id": 560,
+                      "name": "CILILIN"
+                    },
+                    {
+                      "id": 561,
+                      "name": "CIPEUNDEUY"
+                    },
+                    {
+                      "id": 562,
+                      "name": "CIPATAT"
+                    },
+                    {
+                      "id": 563,
+                      "name": "CIPONGKOR"
+                    },
+                    {
+                      "id": 564,
+                      "name": "CISARUA"
+                    },
+                    {
+                      "id": 565,
+                      "name": "GUNUNGHALU"
+                    },
+                    {
+                      "id": 566,
+                      "name": "PADALARANG"
+                    },
+                    {
+                      "id": 567,
+                      "name": "SINDANGKERTA"
+                    },
+                    {
+                      "id": 568,
+                      "name": "CIHAMPELAS"
+                    },
+                    {
+                      "id": 569,
+                      "name": "PARONGPONG"
+                    },
+                    {
+                      "id": 570,
+                      "name": "RONGGA"
+                    },
+                    {
+                      "id": 571,
+                      "name": "SAGULING"
+                    }
+                  ]
+                },
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Districts fetched successfully"
+                    },
+                    "courier": {
+                      "type": "string",
+                      "example": "JNE"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer",
+                            "example": 556
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "NGAMPRAH"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/rates/city": {
       "get": {
         "summary": "list cities from JNE",
@@ -28,6 +161,97 @@
             "description": "successful",
             "content": {
               "application/json": {
+                "example": {
+                  "success": true,
+                  "message": "Cities fetched successfully",
+                  "courier": "JNE",
+                  "data": [
+                    {
+                      "id": 55,
+                      "name": "BANDUNG"
+                    },
+                    {
+                      "id": 56,
+                      "name": "CIMAHI"
+                    },
+                    {
+                      "id": 57,
+                      "name": "SUMEDANG"
+                    },
+                    {
+                      "id": 59,
+                      "name": "GARUT"
+                    },
+                    {
+                      "id": 60,
+                      "name": "BANDUNG BARAT"
+                    },
+                    {
+                      "id": 62,
+                      "name": "CIANJUR"
+                    },
+                    {
+                      "id": 63,
+                      "name": "BEKASI"
+                    },
+                    {
+                      "id": 77,
+                      "name": "BOGOR"
+                    },
+                    {
+                      "id": 129,
+                      "name": "CIREBON"
+                    },
+                    {
+                      "id": 131,
+                      "name": "INDRAMAYU"
+                    },
+                    {
+                      "id": 132,
+                      "name": "KUNINGAN"
+                    },
+                    {
+                      "id": 133,
+                      "name": "MAJALENGKA"
+                    },
+                    {
+                      "id": 199,
+                      "name": "DEPOK"
+                    },
+                    {
+                      "id": 329,
+                      "name": "KARAWANG"
+                    },
+                    {
+                      "id": 532,
+                      "name": "PURWAKARTA"
+                    },
+                    {
+                      "id": 533,
+                      "name": "SUBANG"
+                    },
+                    {
+                      "id": 538,
+                      "name": "SUKABUMI"
+                    },
+                    {
+                      "id": 632,
+                      "name": "TASIKMALAYA"
+                    },
+                    {
+                      "id": 633,
+                      "name": "BANJAR"
+                    },
+                    {
+                      "id": 634,
+                      "name": "CIAMIS"
+                    },
+                    {
+                      "id": 635,
+                      "name": "PANGANDARAN"
+                    }
+                  ]
+                },
                 "schema": {
                   "type": "object",
                   "properties": {
@@ -78,6 +302,149 @@
             "description": "successful",
             "content": {
               "application/json": {
+                "example": {
+                  "success": true,
+                  "message": "Provincies fetched successfully",
+                  "courier": "JNE",
+                  "data": [
+                    {
+                      "id": 1,
+                      "name": "NUSA TENGGARA BARAT (NTB)"
+                    },
+                    {
+                      "id": 2,
+                      "name": "MALUKU"
+                    },
+                    {
+                      "id": 3,
+                      "name": "KALIMANTAN SELATAN"
+                    },
+                    {
+                      "id": 4,
+                      "name": "KALIMANTAN TENGAH"
+                    },
+                    {
+                      "id": 5,
+                      "name": "JAWA BARAT"
+                    },
+                    {
+                      "id": 6,
+                      "name": "BENGKULU"
+                    },
+                    {
+                      "id": 7,
+                      "name": "KALIMANTAN TIMUR"
+                    },
+                    {
+                      "id": 8,
+                      "name": "KEPULAUAN RIAU"
+                    },
+                    {
+                      "id": 9,
+                      "name": "NANGGROE ACEH DARUSSALAM (NAD)"
+                    },
+                    {
+                      "id": 10,
+                      "name": "DKI JAKARTA"
+                    },
+                    {
+                      "id": 11,
+                      "name": "BANTEN"
+                    },
+                    {
+                      "id": 12,
+                      "name": "JAWA TENGAH"
+                    },
+                    {
+                      "id": 13,
+                      "name": "JAMBI"
+                    },
+                    {
+                      "id": 14,
+                      "name": "PAPUA"
+                    },
+                    {
+                      "id": 15,
+                      "name": "BALI"
+                    },
+                    {
+                      "id": 16,
+                      "name": "SUMATERA UTARA"
+                    },
+                    {
+                      "id": 17,
+                      "name": "GORONTALO"
+                    },
+                    {
+                      "id": 18,
+                      "name": "JAWA TIMUR"
+                    },
+                    {
+                      "id": 19,
+                      "name": "DI YOGYAKARTA"
+                    },
+                    {
+                      "id": 20,
+                      "name": "SULAWESI TENGGARA"
+                    },
+                    {
+                      "id": 21,
+                      "name": "NUSA TENGGARA TIMUR (NTT)"
+                    },
+                    {
+                      "id": 22,
+                      "name": "SULAWESI UTARA"
+                    },
+                    {
+                      "id": 23,
+                      "name": "SUMATERA BARAT"
+                    },
+                    {
+                      "id": 24,
+                      "name": "BANGKA BELITUNG"
+                    },
+                    {
+                      "id": 25,
+                      "name": "RIAU"
+                    },
+                    {
+                      "id": 26,
+                      "name": "SUMATERA SELATAN"
+                    },
+                    {
+                      "id": 27,
+                      "name": "SULAWESI TENGAH"
+                    },
+                    {
+                      "id": 28,
+                      "name": "KALIMANTAN BARAT"
+                    },
+                    {
+                      "id": 29,
+                      "name": "PAPUA BARAT"
+                    },
+                    {
+                      "id": 30,
+                      "name": "LAMPUNG"
+                    },
+                    {
+                      "id": 31,
+                      "name": "KALIMANTAN UTARA"
+                    },
+                    {
+                      "id": 32,
+                      "name": "MALUKU UTARA"
+                    },
+                    {
+                      "id": 33,
+                      "name": "SULAWESI SELATAN"
+                    },
+                    {
+                      "id": 34,
+                      "name": "SULAWESI BARAT"
+                    }
+                  ]
+                },
                 "schema": {
                   "type": "object",
                   "properties": {
@@ -160,6 +527,69 @@
             "description": "successful",
             "content": {
               "application/json": {
+                "example": {
+                  "success": true,
+                  "message": "Rates fetched successfully",
+                  "courier": "JNE",
+                  "rates": [
+                    {
+                      "name": "Jalur Nugraha Ekakurir (JNE)",
+                      "code": "jne",
+                      "service": "CTC",
+                      "description": "JNE City Courier",
+                      "cost": 8000,
+                      "etd": "1 day"
+                    },
+                    {
+                      "name": "Jalur Nugraha Ekakurir (JNE)",
+                      "code": "jne",
+                      "service": "CTCYES",
+                      "description": "JNE City Courier",
+                      "cost": 12000,
+                      "etd": "1 day"
+                    },
+                    {
+                      "name": "Jalur Nugraha Ekakurir (JNE)",
+                      "code": "jne",
+                      "service": "CTCSPS",
+                      "description": "JNE City Courier",
+                      "cost": 25000,
+                      "etd": "1 day"
+                    },
+                    {
+                      "name": "Jalur Nugraha Ekakurir (JNE)",
+                      "code": "jne",
+                      "service": "JTR",
+                      "description": "JNE Trucking",
+                      "cost": 40000,
+                      "etd": "3 day"
+                    },
+                    {
+                      "name": "Jalur Nugraha Ekakurir (JNE)",
+                      "code": "jne",
+                      "service": "JTR<130",
+                      "description": "JNE Trucking",
+                      "cost": 200000,
+                      "etd": "3 day"
+                    },
+                    {
+                      "name": "Jalur Nugraha Ekakurir (JNE)",
+                      "code": "jne",
+                      "service": "JTR>130",
+                      "description": "JNE Trucking",
+                      "cost": 350000,
+                      "etd": "3 day"
+                    },
+                    {
+                      "name": "Jalur Nugraha Ekakurir (JNE)",
+                      "code": "jne",
+                      "service": "JTR>200",
+                      "description": "JNE Trucking",
+                      "cost": 500000,
+                      "etd": "3 day"
+                    }
+                  ]
+                },
                 "schema": {
                   "type": "object",
                   "properties": {
